--- a/oneforall/values.yaml
+++ b/oneforall/values.yaml
@@ -1,14 +1,14 @@
 api:
   name: student-app-api
   repCount: 1
-  image: thangsu/student-app-api:0.0.1-SNAPSHOT
+  image: ndthuong/student-app-api:0.0.1-SNAPSHOT
   port: 8080
   targetPort: 8080
 
 client:
   name: student-app-client
   repCount: 1
-  image: thangsu/student-app-client
+  image: ndthuong/student-app-client:latest
   port: 80
   targetPort: 80
 
